ecmascript/parser/tests/typescript-errors/tsc/es6/unicodeExtendedEscapes/unicodeExtendedEscapesInTemplates17_ES5/input.ts.stderr
error[1198]: An extended Unicode escape value must be between 0x0 and 0x10FFFF inclusive.
 --> $DIR/tests/typescript-errors/tsc/es6/unicodeExtendedEscapes/unicodeExtendedEscapesInTemplates17_ES5/input.ts:3:18
  |
3 | var x = `\u{r}\u{n}\u{t}`;
  |                  ^

error[1198]: An extended Unicode escape value must be between 0x0 and 0x10FFFF inclusive.
 --> $DIR/tests/typescript-errors/tsc/es6/unicodeExtendedEscapes/unicodeExtendedEscapesInTemplates17_ES5/input.ts:3:23
  |
3 | var x = `\u{r}\u{n}\u{t}`;
  |                       ^

